--- a/pres/pres.tex
+++ b/pres/pres.tex
@@ -256,7 +256,7 @@ Where
 \begin{itemize}
 \item $\mu(x) = \log(\mathcal{V}(x))$
 \item Discretize the values of the $\mu$ function to the nearest multiple of some $\mu_0$
-\item Narayanan and Shmatikov use a $\mu_0$ that yields around 1000 different discrete values
+\item Narayanan and Shmatikov use a $\mu_0$ that yields approximately 1000 different discrete values
 \end{itemize}
 \end{frame}
 
